--- a/rectangle.css
+++ b/rectangle.css
@@ -1,7 +1,7 @@
 h1{
     background-color: green;
 }
-div{ 
+.main{ 
     font-size: 1.1em;
     margin: 50px auto;
     width:170px;
@@ -15,4 +15,10 @@ input,label{
 }
 span {
     color: red;
-  }
+}
+#width-validate,
+#height-validate{
+    color: red;
+    margin-left: 2px;
+    font-size: 0.8em;
+}
