--- a/rectangle.css
+++ b/rectangle.css
@@ -1,3 +1,10 @@
+body, html {
+    position: absolute;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
 h1{
     background-color: green;
 }
